fix cluster appendix bug

--- a/custom.bib
+++ b/custom.bib
@@ -968,3 +968,25 @@ series = {AIES '21}
       primaryClass={cs.CL},
       url={https://arxiv.org/abs/2411.10912}, 
 }
+
+@misc{hu2024quantifyingpersonaeffectllm,
+      title={Quantifying the Persona Effect in LLM Simulations}, 
+      author={Tiancheng Hu and Nigel Collier},
+      year={2024},
+      eprint={2402.10811},
+      archivePrefix={arXiv},
+      primaryClass={cs.CL},
+      url={https://arxiv.org/abs/2402.10811}, 
+}
+
+@inproceedings{poddar2024variationalpreference,
+ author = {Poddar, Sriyash and Wan, Yanming and Ivison, Hamish and Gupta, Abhishek and Jaques, Natasha},
+ booktitle = {Advances in Neural Information Processing Systems},
+ editor = {A. Globerson and L. Mackey and D. Belgrave and A. Fan and U. Paquet and J. Tomczak and C. Zhang},
+ pages = {52516--52544},
+ publisher = {Curran Associates, Inc.},
+ title = {Personalizing Reinforcement Learning from Human Feedback with Variational Preference Learning},
+ url = {https://proceedings.neurips.cc/paper_files/paper/2024/file/5e1c255653eb98cef13f45b2d337c882-Paper-Conference.pdf},
+ volume = {37},
+ year = {2024}
+}
