--- a/acl_latex.tex
+++ b/acl_latex.tex
@@ -669,6 +669,9 @@ Some promising avenues for future work include:
 and 
 \nextitem{} human evaluations to see how well represented people feel by value profiles.
 
+\section*{Acknowledgements}
+We would like to thank Lora Aroyo, Laura Weidinger and Ahmad Beirami for helpful discussions. We would also like to thank Charvi Rastogi and Jared Moore for useful draft feedback.
+
 \newpage
 
 \section{Limitations}
@@ -716,8 +719,6 @@ Also, while demographics may not be the most ideal rater representation in many 
 
 \newpage
 
-% \section*{Acknowledgements}
-% We would like to thank Lora Aroyo, Laura Weidinger and Ahmad Beirami for helpful discussions. We would also like to thank Charvi Rastogi and Jared Moore for useful draft feedback.
 
 
 \newpage
