--- a/acl_latex.tex
+++ b/acl_latex.tex
@@ -100,9 +100,9 @@
 \begin{abstract}
 % Modelling human variation in rating tasks is crucial for enabling AI systems for personalization, pluralistic model alignment, and computational social science.
 Modelling human variation in rating tasks is crucial for personalization, pluralistic model alignment, and computational social science.
-We propose representing individuals using natural language {\em value profiles} -- descriptions of underlying values compressed from in-context demonstrations -- along with a steerable decoder model to estimate individual ratings based on a rater representation. To measure the predictive information in a representations, we introduce an information-theoretic methodology and find that demonstrations contain the most information, followed by value profiles and then demographics. However, value profiles effectively compress the useful information from demonstrations ($>$70\% information preservation) and offer advantages in terms of scrutability, interpretability, and steerability.
+We propose representing individuals using natural language {\em value profiles} -- descriptions of underlying values compressed from in-context demonstrations -- along with a steerable decoder model that estimates individual ratings from a rater representation. To measure the predictive information in a rater representation, we introduce an information-theoretic methodology and find that demonstrations contain the most information, followed by value profiles, then demographics. However, value profiles effectively compress the useful information from demonstrations ($>$70\% information preservation) and offer advantages in terms of scrutability, interpretability, and steerability.
 Furthermore, clustering value profiles to identify similarly behaving individuals better explains rater variation than the most predictive demographic groupings.
-Going beyond test set performance, we show that the decoder models change ratings in line with semantic profile differences, are well-calibrated, and can help explain instance-level disagreement by simulating an annotator population.
+Going beyond test set performance, we show that the decoder predictions change in line with semantic profile differences, are well-calibrated, and can help explain instance-level disagreement by simulating an annotator population.
 These results demonstrate that value profiles offer novel, predictive ways to describe individual variation beyond demographics or group information.
 \end{abstract}
 
